--- a/src/Styles/PhotoItem.css
+++ b/src/Styles/PhotoItem.css
@@ -14,3 +14,23 @@
 	border-radius: 20px;
 	object-fit: cover;
 }
+
+.JJ-cover:hover {
+	cursor: pointer;
+}
+
+#lightbox {
+	z-index: 1;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	scale: 0.6;
+	/*optional bg color*/
+	background: rgba(0, 0, 0, 0.747);
+	/*the following isn't necessary but will help center everything once we add buttons*/
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+  }
